--- a/Drawings/Info.plist
+++ b/Drawings/Info.plist
@@ -63,5 +63,7 @@
 		<string>Montserrat-Medium.ttf</string>
 		<string>Montserrat-Regular.ttf</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This application needs access to your library to save the image</string>
 </dict>
 </plist>
